--- a/ecom-web-site/package.json
+++ b/ecom-web-site/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.14",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
+    "stripe": "13.2.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
