--- a/ecom-web-site/package.json
+++ b/ecom-web-site/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.14",
+    "@react-email/components": "0.0.32",
     "@reduxjs/toolkit": "^2.5.0",
+    "@responsive-email/react-email": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
-    "stripe": "13.2.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-redux": "^9.2.0",
+    "resend": "^4.1.2",
+    "stripe": "13.2.0"
   },
   "devDependencies": {
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "postcss": "^8",
+    "react-email": "3.0.6",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
   }
