--- a/ecom-web-site/tsconfig.json
+++ b/ecom-web-site/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.tsx",
     "next-env.d.ts",
     ".next/types/**/*.ts"
-  ],
+, "app/_components/email-template.tsx"  ],
   "exclude": [
     "node_modules"
   ]
