--- a/ecom-web-site/package.json
+++ b/ecom-web-site/package.json
@@ -21,6 +21,7 @@
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "resend": "^4.1.2",
     "stripe": "13.2.0"
